Solve single piece alignment on pocket pick-up by treating it the same as a group pick-up i.e. use the grid container for it.

--- a/client/styles.css
+++ b/client/styles.css
@@ -405,7 +405,7 @@ label, input[type=checkbox] {
 .puzzle-piece {
     background-color: transparent;
     background-repeat: no-repeat;
-    /* transform-origin: 0 0; */
+    transform-origin: 0 0;
 }
 
 .js-highlight {
